@@ -5,6 +5,8 @@ Changes to Version 2.0-13
     o Improved handling of center.pch argument to ellipse() (suggestion of Rob Kushler).
     
     o New test argument for linearHypothesis.mer()  and test.statistic argument for Anova.mer() for F-tests with Kenward/Roger df, provided by pbkrtest package.
+    
+    o Anova.mlm() now will do univariate repeated-measures ANOVA even if the error SSP matrix is singular.
 
 Changes to Version 2.0-12
 
